src/coolcmp/unit_tests/Custom/type_checker/fail/self-border.cl
class Main {
    main() : SELF_TYPE { self };
};

class A {
    fun() : SELF_TYPE { new A };
};

-- class B inherits A {};